# yashiro

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  make.toml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  README.md  installation.md  usage.md
docs/source/: conf.py  installation.rst  usage.rst
src/yashiro/: __main__.py  main.py
src/yashiro/command/: yashiro.py
src/yashiro/lib/: cli.py  parser.py
tests/: conftest.py  test_main.py
tests/data/: test.ini  test.json  test.template  test.toml  test.yml
tests/yashiro/: test_main.py
tests/yashiro/command/: test_yashiro.py
tests/yashiro/lib/: test_parser.py
